--- a/paginas/Pagina2.html
+++ b/paginas/Pagina2.html
@@ -19,10 +19,10 @@
                 <button type="">🔎</button>
             </Form>
         </div>
-<a href="../paginas/index.html">        <img src="../img/logo.png" alt="Logo EDMA"></a>
+<a href="../paginas/index.html">        <img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA"></a>
         <a href="../paginas/index.html">Home</a>
-        <a href="../paginas/Pagina2.html">About</a>
-        <a href="../paginas/pagina3.html">Store</a>
+        <a href="../paginas/Pagina2.html">Woman</a>
+        <a href="../paginas/pagina3.html">Men</a>
         <a href="../paginas/pagina4.html">Contact Us</a>
     </nav>
     <div class="tarjeta">
@@ -88,5 +88,31 @@
                 </div>
             </div>
     </div>
+
+    <div class="black-section">
+        <div class="black-card">
+            <img src="../img/cozy-outfits-celine-sweatshirt-faecb3a023e64945ba3aeba1270fe7b0.jpg" alt="Sudadera">
+            <h2>Señoritas</h2>
+            <button>Click</button>
+        </div>
+        <div class="black-card">
+            <img src="../img/descarga (5).jpg" alt="Jeans">
+            <h2>Womans</h2>
+            <button>Click</button>
+        </div>
+        <div class="black-card">
+            <img src="../img/f6850293d04391864757de3557f565c3.jpg" alt="Camisetas">
+            <h2>Mujeres</h2>
+            <button>Click</button>
+        </div>
+    </div>
+    
+
+    <div>
+        <footer>
+        <p>&copy;derechos reservados EdgarGomez 2025</p>
+    </footer>
+</div>
+
 </body>
 </html>
