--- a/paginas/pagina3.html
+++ b/paginas/pagina3.html
@@ -15,39 +15,69 @@
                 <button type="">🔎</button>
             </Form>
         </div>
-<a href="../paginas/index.html">        <img src="../img/logo.png" alt="Logo EDMA"></a>
+<a href="../paginas/index.html">        <img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA"></a>
         <a href="../paginas/index.html">Home</a>
-        <a href="../paginas/Pagina2.html">About</a>
-        <a href="../paginas/pagina3.html">Store</a>
+        <a href="../paginas/Pagina2.html">Woman</a>
+        <a href="../paginas/pagina3.html">Men</a>
         <a href="../paginas/pagina4.html">Contact Us</a>
     </nav>
-       <div class="tarjeta">
+    <div class="tarjeta">
         <div class="card">
-            <img src="../img/adyft03273_dcshoes,f_brm0_bck1.jpg" alt="" height="">
-            <div class="cards-content">
-                <h1>SUDADERAS</h1>
-                <button class="button"><a href="https://www.bluebananabrand.com/collections/sudaderas-oversize-hombre?srsltid=AfmBOoqGxEGeKQZ6OcSqDZ0_N265qbyS6VRItZ-8kmglkYJ3AzEaG-vM">click</a></button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="../img/descarga (9).jpg" alt="" height="200px">
-            <div class="cards-content">
-                <h1>JEANS</h1>
-                <button class="button"><a href="https://shop.diesel.com/es/hombre/denim/relaxed/">click</a></button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="../img/Wholesale-Men-Acid-Wash-T-Shirt-Streetwear-Hip-Hop-Stone-100-Cotton-T-Shirts-with-Logo-Customize-Oversized-Vintage-T-Shirt.avif" alt="" height="">
-            <div class="cards-content">
-                <h1>CAMISAS</h1>
-                <button class="button"><a href="https://www.koaj.co/especiales/camisetas-oversize/">click</a></button>   
-            </div>
-            <div class="card">
-                <img src="../img/descarga (10).jpg" alt="" height="">
-                <div class="cards-content">
-                    <h1>ZAPATOS</h1>
-                    <button class="button"><a href="https://www.koaj.co/especiales/camisetas-oversize/">click</a></button>   
-                </div>
-       
+<img src="../img/adyft03273_dcshoes,f_brm0_bck1.jpg" alt="" height="">
+
+<div class="cards-content">
+    <h1>SUDADERAS</h1>
+    <button class="button"><a href="https://www.bluebananabrand.com/collections/sudaderas-oversize-hombre?srsltid=AfmBOoqGxEGeKQZ6OcSqDZ0_N265qbyS6VRItZ-8kmglkYJ3AzEaG-vM">click</a></button>
+</div>
+
+</div>
+
+<div class="card">
+<img src="../img/descarga (9).jpg" alt="" height="200px">
+<div class="cards-content">
+    <h1>JEANS</h1>
+    <button class="button"><a href="https://shop.diesel.com/es/hombre/denim/relaxed/">click</a></button>
+</div>
+</div>
+
+<div class="card">
+<img src="../img/Wholesale-Men-Acid-Wash-T-Shirt-Streetwear-Hip-Hop-Stone-100-Cotton-T-Shirts-with-Logo-Customize-Oversized-Vintage-T-Shirt.avif" alt="" height="">
+<div class="cards-content">
+    <h1>CAMISAS</h1>
+    <button class="button"><a href="https://www.koaj.co/especiales/camisetas-oversize/">click</a></button>   
+</div>
+</div>
+<div class="card">
+    <img src="../img/descarga (10).jpg" alt="" height="">
+    <div class="cards-content">
+        <h1>ZAPATOS</h1>
+        <button class="button"><a href="https://www.koaj.co/especiales/camisetas-oversize/">click</a></button>   
+</div>
+   </div>
+
+   <div class="black-section">
+    <div class="black-card">
+        <img src="../img/descarga (12).jpg" alt="Sudadera">
+        <h2>Caballeros</h2>
+        <button>Click</button>
+    </div>
+    <div class="black-card">
+        <img src="../img/descarga (11).jpg" alt="Jeans">
+        <h2>Mens</h2>
+        <button>Click</button>
+    </div>
+    <div class="black-card">
+        <img src="../img/Milan-Fashion-Week_-Men_Street-Style_xmag4-180624.jpg-900x1350.jpg" alt="Camisetas">
+        <h2>Hombres</h2>
+        <button>Click</button>
+    </div>
+</div>
+
+   <div>
+    <footer>
+    <p>&copy;derechos reservados EdgarGomez 2025</p>
+</footer>
+</div>
+
 </body>
 </html>
