--- a/paginas/pagina4.html
+++ b/paginas/pagina4.html
@@ -15,11 +15,17 @@
                 <button type="">🔎</button>
             </Form>
         </div>
-<a href="../paginas/index.html">        <img src="../img/logo.png" alt="Logo EDMA"></a>
+<a href="../paginas/index.html">        <img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA"></a>
         <a href="../paginas/index.html">Home</a>
-        <a href="../paginas/Pagina2.html">About</a>
-        <a href="../paginas/pagina3.html">Store</a>
+        <a href="../paginas/Pagina2.html">Woman</a>
+        <a href="../paginas/pagina3.html">Men</a>
         <a href="../paginas/pagina4.html">Contact Us</a>
     </nav>
+    <div>
+        <footer>
+        <p>&copy;derechos reservados EdgarGomez 2025</p>
+    </footer>
+</div>
+
 </body>
 </html>
