--- a/paginas/index.html
+++ b/paginas/index.html
@@ -9,45 +9,35 @@
 <body>
 <nav>
     <div>
-        <Form>
-            <input type="text">
-       
-            <button type="">🔎</button>
-        </Form>
+        <form>
+            <input type="text" placeholder="Buscar...">
+            <button type="submit">🔎</button>
+        </form>
     </div>
     <img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA">
     <a href="../paginas/index.html">Home</a>
     <a href="../paginas/Pagina2.html">Woman</a>
     <a href="../paginas/pagina3.html">Men</a>
-    <a href="../paginas/pagina4.html">Cntact Us</a>
+    <a href="../paginas/pagina4.html">Contact Us</a>
 </nav>
-<div class="tarjeta">
-    <div>
-<a href="../paginas/Pagina2.html">    
-    <div class="card">
-        <img src="../img/mujer.png" alt="Mujer">
-        <div class="card-content">
-        </div>
-    </div>
-</a>
-</div>
-<div class="tarjeta">
-    <div>
-<a href="../paginas/Pagina3.html">    
-    <div class="card">
-        <img src="../img/hombre.jpg" alt="Mujer">
-        <div class="card-content">
-        </div>
-    </div>
-</a>
-</div>
 
-<div>
-                <footer>
-                <p>&copy;derechos reservados EdgarGomez 2025</p>
-            </footer>
-</div>
+<main>
+    <div class="tarjetas-container">
+        <a href="../paginas/Pagina2.html" class="card">
+            <img src="../img/mujer.png" alt="Mujer">
+            <div class="card-content">Moda Mujer</div>
+        </a>
 
-</div>
+        <a href="../paginas/Pagina3.html" class="card">
+            <img src="../img/hombre.jpg" alt="Hombre">
+            <div class="card-content">Moda Hombre</div>
+        </a>
+    </div>
+</main>
+
+<footer>
+    <p>&copy; Derechos reservados EDMA 2025</p>
+</footer>
+
 </body>
 </html>
