--- a/paginas/pagina3.html
+++ b/paginas/pagina3.html
@@ -3,81 +3,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Pagina 3</title>
+    <link rel="stylesheet" href="../CSS/hoja2.css">
+    <title>EDMA</title>
 </head>
 <body>
+
     <nav>
         <div>
-            <Form>
-                <input type="text">
-           
-                <button type="">🔎</button>
-            </Form>
+            <form>
+                <input type="text" placeholder="Buscar...">
+                <button type="submit">🔎</button>
+            </form>
         </div>
-<a href="../paginas/index.html">        <img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA"></a>
+        <a href="../paginas/index.html"><img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA"></a>
         <a href="../paginas/index.html">Home</a>
         <a href="../paginas/Pagina2.html">Woman</a>
         <a href="../paginas/pagina3.html">Men</a>
         <a href="../paginas/pagina4.html">Contact Us</a>
     </nav>
-    <div class="tarjeta">
-        <div class="card">
-<img src="../img/adyft03273_dcshoes,f_brm0_bck1.jpg" alt="" height="">
 
-<div class="cards-content">
-    <h1>SUDADERAS</h1>
-    <button class="button"><a href="https://www.bluebananabrand.com/collections/sudaderas-oversize-hombre?srsltid=AfmBOoqGxEGeKQZ6OcSqDZ0_N265qbyS6VRItZ-8kmglkYJ3AzEaG-vM">click</a></button>
-</div>
+    <main>
+        <div class="card-container">
+            <div class="card">
+                <img src="../img/men3.jpg" alt="Suéter celeste">
+                <div class="card-content">
+                    <h1>Hoodie Celeste</h1>
+                    <h2>$29.99</h2>
+                    <p>Sudadera azul claro de estilo relajado, perfecta para días frescos con un toque moderno y casual.</p>    
+                    <a href="../paginas/pagina4.html">
+                        <button>Click</button>
+                    </a>
+</a>
+                </div>
+            </div>
 
-</div>
+            <div class="card">
+                <img src="../img/men6.jpg" alt="Jeans">
+                <div class="card-content">
+                    <h1>Jeans Hombre</h1>
+                    <h2>$30.99</h2>
+                    <p> Pantalón de mezclilla clásico para hombre, ideal para combinar con cualquier atuendo y ofrecer comodidad duradera.</p>
+                    <a href="../paginas/pagina4.html">
+                        <button>Click</button>
+                    </a>
+                </div>
+            </div>
 
-<div class="card">
-<img src="../img/descarga (9).jpg" alt="" height="200px">
-<div class="cards-content">
-    <h1>JEANS</h1>
-    <button class="button"><a href="https://shop.diesel.com/es/hombre/denim/relaxed/">click</a></button>
-</div>
-</div>
+            <div class="card">
+                <img src="../img/men2.avif" alt="Camisa negra">
+                <div class="card-content">
+                    <h1>Black Shirt</h1>
+                    <h2>$39.99</h2>
+                    <p>Camiseta negra básica, versátil y elegante, adecuada tanto para un look casual como para ocasiones más refinadas.
+                    </p>
+                    <a href="../paginas/pagina4.html">
+                        <button>Click</button>
+                    </a>
+                </div>
+            </div>
 
-<div class="card">
-<img src="../img/Wholesale-Men-Acid-Wash-T-Shirt-Streetwear-Hip-Hop-Stone-100-Cotton-T-Shirts-with-Logo-Customize-Oversized-Vintage-T-Shirt.avif" alt="" height="">
-<div class="cards-content">
-    <h1>CAMISAS</h1>
-    <button class="button"><a href="https://www.koaj.co/especiales/camisetas-oversize/">click</a></button>   
-</div>
-</div>
-<div class="card">
-    <img src="../img/descarga (10).jpg" alt="" height="">
-    <div class="cards-content">
-        <h1>ZAPATOS</h1>
-        <button class="button"><a href="https://www.koaj.co/especiales/camisetas-oversize/">click</a></button>   
-</div>
-   </div>
+            <div class="card">
+                <img src="../img/mne9.png" alt="Jeans Baggy">
+                <div class="card-content">
+                    <h1>Jeans Baggy</h1>
+                    <h2>$59.12</h2>
+                    <p> Pantalón de mezclilla estilo suelto, con un ajuste relajado para mayor comodidad y un look urbano.</p>
+                    <a href="../paginas/pagina4.html">
+                        <button>Click</button>
+                    </a>
+                </div>
+            </div>
 
-   <div class="black-section">
-    <div class="black-card">
-        <img src="../img/descarga (12).jpg" alt="Sudadera">
-        <h2>Caballeros</h2>
-        <button>Click</button>
-    </div>
-    <div class="black-card">
-        <img src="../img/descarga (11).jpg" alt="Jeans">
-        <h2>Mens</h2>
-        <button>Click</button>
-    </div>
-    <div class="black-card">
-        <img src="../img/Milan-Fashion-Week_-Men_Street-Style_xmag4-180624.jpg-900x1350.jpg" alt="Camisetas">
-        <h2>Hombres</h2>
-        <button>Click</button>
-    </div>
-</div>
+            <div class="card">
+                <img src="../img/men8.jpg" alt="Zapatos">
+                <div class="card-content">
+                    <h1>Zapatos</h1>
+                    <h2>$99.00</h2>
+                    <p>Variedad de calzado moderno, desde zapatillas deportivas hasta opciones más elegantes, ofreciendo estilo y confort.</p>
+                    <a href="../paginas/pagina4.html">
+                        <button>Click</button>
+                    </a>
+                </div>
+            </div>
 
-   <div>
+            <div class="card">
+                <img src="../img/men7.jpg" alt="Zapato gris">
+                <div class="card-content">
+                    <h1>Zapato Grey</h1>
+                    <h2>$9.89</h2>
+                    <p>Zapatillas grises con diseño minimalista, ideales para quienes buscan un toque sofisticado sin perder la comodidad.
+                    </p>
+                    <a href="../paginas/pagina4.html">
+                        <button>Click</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="black-section">
+            <div class="black-card">
+                <img src="../img/men5.jpg" alt="Men_style1">
+                <h2>Caballeros</h2>
+                <a href="../paginas/pagina4.html">
+                    <button>Click</button>
+                </a>
+            </div>
+            <div class="black-card">
+                <img src="../img/men4.jpg" alt="Men_style2">
+                <h2>Mens</h2>
+                <a href="../paginas/pagina4.html">
+                    <button>Click</button>
+                </a>
+            </div>
+            <div class="black-card">
+                <img src="../img/men1.jpg" alt="Men_style3">
+                <h2>Hombres</h2>
+                <a href="../paginas/pagina4.html">
+                    <button>Click</button>
+                </a>
+            </div>
+        </div>
+
+    </main>
+
     <footer>
-    <p>&copy;derechos reservados EdgarGomez 2025</p>
-</footer>
-</div>
+        <p>&copy; Derechos reservados EDMA 2025</p>
+    </footer>
 
 </body>
 </html>
