--- a/paginas/pagina4.html
+++ b/paginas/pagina4.html
@@ -3,29 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>pagina 4</title>
+    <link rel="stylesheet" href="../CSS/hoja3.css">
+    <title>Contact Us - EDMA</title>
 </head>
 <body>
     <nav>
         <div>
-            <Form>
-                <input type="text">
-           
-                <button type="">🔎</button>
-            </Form>
+            <form>
+                <input type="text" placeholder="Buscar...">
+                <button type="submit">🔎</button>
+            </form>
         </div>
-<a href="../paginas/index.html">        <img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA"></a>
+        <a href="../paginas/index.html">
+            <img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA">
+        </a>
         <a href="../paginas/index.html">Home</a>
         <a href="../paginas/Pagina2.html">Woman</a>
         <a href="../paginas/pagina3.html">Men</a>
         <a href="../paginas/pagina4.html">Contact Us</a>
     </nav>
-    <div>
-        <footer>
-        <p>&copy;derechos reservados EdgarGomez 2025</p>
-    </footer>
-</div>
 
+    <section class="contact-container">
+        <h1>Estos son nuestros contactos</h1>
+        <p><strong>Correo Electrónico:</strong> contacto@edma.com</p>
+        <p><strong>Instagram:</strong> @edma_contact</p>
+        <p><strong>Teléfono:</strong> +503 1234 5678</p>
+        <h2>Puedes encontrarnos aquí</h2>
+        <p>Calle Falsisima 123, San Salvador, El Salvador</p>
+    
+        <!-- Mapa de ubicación -->
+        <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3876.286702175501!2d-89.23011490783425!3d13.70107778667189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63303f73a1d92b%3A0x59753be84892bfc0!2sMillennium%20Plaza!5e0!3m2!1ses!2ssv!4v1745780631917!5m2!1ses!2ssv" 
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>>
+
+    <footer>
+        <p>&copy; Derechos reservados EDMA 2025</p>
+    </footer>
 </body>
 </html>
