--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/hoja1.css">
+    <link rel="stylesheet" href="./CSS/hoja1.css">
     <title>EDMA</title>
 </head>
 <body>
@@ -14,22 +14,22 @@
             <button type="submit">🔎</button>
         </form>
     </div>
-    <img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA">
-    <a href="../paginas/index.html">Home</a>
-    <a href="../paginas/Pagina2.html">Woman</a>
-    <a href="../paginas/pagina3.html">Men</a>
-    <a href="../paginas/pagina4.html">Contact Us</a>
+    <img src="./img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA">
+    <a href="./index.html">Home</a>
+    <a href="./paginas/Pagina2.html">Woman</a>
+    <a href="./paginas/pagina3.html">Men</a>
+    <a href="./paginas/pagina4.html">Contact Us</a>
 </nav>
 
 <main>
     <div class="tarjetas-container">
-        <a href="../paginas/Pagina2.html" class="card">
-            <img src="../img/mujer.png" alt="Mujer">
+        <a href="./paginas/Pagina2.html" class="card">
+            <img src="./img/mujer.png" alt="Mujer">
             <div class="card-content">Moda Mujer</div>
         </a>
 
-        <a href="../paginas/Pagina3.html" class="card">
-            <img src="../img/hombre.jpg" alt="Hombre">
+        <a href="./paginas/Pagina3.html" class="card">
+            <img src="./img/hombre.jpg" alt="Hombre">
             <div class="card-content">Moda Hombre</div>
         </a>
     </div>
