--- a/paginas/pagina4.html
+++ b/paginas/pagina4.html
@@ -14,10 +14,10 @@
                 <button type="submit">🔎</button>
             </form>
         </div>
-        <a href="../paginas/index.html">
+        <a href="../index.html">
             <img src="../img/63d9b9d5-5251-483e-ba30-d4fbccc3668c-removebg-preview.png" alt="Logo EDMA">
         </a>
-        <a href="../paginas/index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="../paginas/Pagina2.html">Woman</a>
         <a href="../paginas/pagina3.html">Men</a>
         <a href="../paginas/pagina4.html">Contact Us</a>
