Entrega Final.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="card-content">Moda Mujer</div>
         </a>
 
-        <a href="./paginas/Pagina3.html" class="card">
+        <a href="./paginas/pagina3.html" class="card">
             <img src="./img/hombre.jpg" alt="Hombre">
             <div class="card-content">Moda Hombre</div>
         </a>
