--- a/paginas/pagina4.html
+++ b/paginas/pagina4.html
@@ -39,7 +39,7 @@
     </section>>
 
     <footer>
-        <p>&copy; Derechos reservados EDMA 2025</p>
+        <p>&copy; Derechos reservados EDMA 2025.</p>
     </footer>
 </body>
 </html>
