--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </main>
 
 <footer>
-    <p>&copy; Derechos reservados EDMA 2025</p>
+    <p>&copy; Derechos reservados EDMA 2025.</p>
 </footer>
 
 </body>
