--- a/paginas/Pagina2.html
+++ b/paginas/Pagina2.html
@@ -125,7 +125,7 @@
     </main>
 
     <footer>
-        <p>&copy; Derechos reservados EDMA 2025</p>
+        <p>&copy; Derechos reservados EDMA 2025.</p>
     </footer>
 
 </body>
