--- a/paginas/pagina3.html
+++ b/paginas/pagina3.html
@@ -127,7 +127,7 @@
     </main>
 
     <footer>
-        <p>&copy; Derechos reservados EDMA 2025</p>
+        <p>&copy; Derechos reservados EDMA 2025.</p>
     </footer>
 
 </body>
